fixed alignment in the child page for bottom text and added lots of html and css for homepage.

--- a/final/styles/models.css
+++ b/final/styles/models.css
@@ -97,11 +97,7 @@ h4{
 }
 
 #impact-legacy{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: left;
-    width: 1140px;
+  
 }
 
 #impact-legacy h2{
@@ -109,6 +105,14 @@ h4{
     font-family: "kanit", Arial, Helvetica, sans-serif;
     color: #DB162F;
     font-size: 40px;
+}
+
+#impact-legacy img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1140px;
+    padding-bottom: 40px;
 }
 
 #rise-snowboarding-img{
